# converter_xlsx_json

./: .gitignore  README.md  pyproject.toml
data/: Schnittstellenpartner.xlsx
doc/: uml_classes.uxf
src/: app.py  config.py  data_validator.py  excel_reader.py  json_writer.py  main.py
